(2000/04/20 - Joshua) -k kernel option and code clean up
(2000/04/20 - edgar) prevention of cscope.out corruption and correct dboffset calulation
(2000/04/20 - martin) Use 'env LC_ALL=C sort' rather than 'LC_ALL=C sort' for sorting
(2000/04/19 - petr) Added README/NEWS/AUTHORS files
(2000/04/19 - jens) Non-preformatted man page
(2000/04/19 - petr) Make sure install directory exists with make install
(2000/04/19 - petr) Make sure temporary directory exists
(2000/04/18 - petr) Remove temporary buffer
(2000/04/18 - garyp) Support for .cc and .hh files
(2000/04/17 - petr) Initial OpenSource release. Initial Linux port