@@ -1,3 +1,4 @@
+(2000/04/21 - petr) Created new build directory with system specific makefiles
 (2000/04/20 - Joshua) -k kernel option and code clean up
 (2000/04/20 - edgar) prevention of cscope.out corruption and correct dboffset calulation
 (2000/04/20 - martin) Use 'env LC_ALL=C sort' rather than 'LC_ALL=C sort' for sorting
